FlightPath 4.x Changelog
========================

2015-12-9
  Have been working on unassignments in groups, cleaned up a lot of code, and have been making the Degrees page listing
  (for admin data entry) much cleaner and nicer-looking.
  

2015-12-3
  Unassignments appear to be working for bare degree plan and in groups.  Working on making student's multiple degrees
  show up nicer in the Currently Advising box.


2015-12-2
  Worked on unassignments per degree, both on bare degree plan and in groups.


2015-11-30
  Working on split additions within groups.


2015-11-24
  Made numerous changes to get split substitutions working (on the bare degree plan).  They tentatively seem to be working, separated between
  degrees.  Still have a little ways to go, including split subs inside of groups, and making them show in Excess credit correctly.
  

2015-11-20
  Continued working on split subs.  It has been slow, I've had to move various variables into the details_by_degree array, to separate them
  out by what degree they were assigned to.
  

2015-11-18
  Worked more on splitting subs across degrees; still not finished.  Implemented new system for keeping all attributes associated with a specific degree
  together under one array (for course).  Continued making changes so as not to trigger notice messages.  Caught several potential problems before they started
  that way.
  

2015-11-17
  Still working on subs (split subs now).  Changed FP error_reporting to allow notices to appear, for the sake of catching typos and missed variabls
  as I develop.  As a result, numerous changes were made in numerous files.
  

2015-11-16
  Worked on getting subs within groups to work across different degrees.


2015-11-11
  Continued working on degree-specific subs, had to create an array of substitutions, by degree.  Basically, I will need to do this for anything involving
  substitutions I believe.
  

2015-11-10