@@ -424,10 +424,28 @@ function advise_display_popup_change_track() {
   advise_init_screen();
   
   fp_add_js(fp_get_module_path("advise") . "/js/advise.js");
-  
-  
+   
+    
+  $degree_plan_array = array();
+  if ($degree_plan->is_combined_dynamic_degree_plan == FALSE) {
+    // NOT a combined degree plan.  Just use the 1 degree plan we gots.
+    $degree_plan_array[$degree_plan->degree_id] = $degree_plan;
+  }
+  else {
+    // It IS a combined degree plan, so we need to get all the plans out of there.
+    foreach ($degree_plan->combined_degree_ids_array as $t_degree_id) {
+      $t_degree_plan = new DegreePlan($t_degree_id);
+      $t_degree_plan->load_descriptive_data();
 
-  $degree_plan->load_descriptive_data();
+      if ($t_degree_plan->get_available_tracks()) {
+      }
+      
+      $degree_plan_array[$t_degree_plan->degree_id] = $t_degree_plan;
+      
+    }    
+  }
+  
+  
   $rtn .= fp_render_curved_line(t("Select a Degree Option"));
   $rtn .= "<div class='tenpt'>
       " . t("The student's degree has one or more degree options, which affects which courses are required. 
@@ -436,111 +454,118 @@ function advise_display_popup_change_track() {
       " . t("If you are unsure of what to do, simply close this window.");
 
   // TODO:  Loop through available degrees here
-
-  // TODO:  Skip any degree plan that isn't level 1 or level 2.
+  foreach ($degree_plan_array as $t_degree_plan) {
   
-  // Let's look to see what "tracks" this degree has.
+    $t_degree_plan->load_descriptive_data();
   
-  $rtn .= "<br><br><b>" . $degree_plan->title . "</b> " . t("degree options:") . "</div><!--DEFAULT-->
-      <ul>";
+  
+    // Skip any degree plan that isn't level 1 or level 2.  In other words,
+    // if this is already a track, then skip it.
+    $details = fp_get_degree_classification_details($t_degree_plan->degree_class);
+    //fpm($details);  
+    if ($details["level_num"] == 3) continue;
+    
+    // Let's look to see what "tracks" this degree has.
+  
+    $rtn .= "<br><br><b>" . $t_degree_plan->title . "</b> " . t("degree options:") . "</div><!--DEFAULT-->
+        <ul>";
 
-  $major_code = $degree_plan->major_code;
+    $major_code = $t_degree_plan->major_code;
 
-  // Get the list of available tracks for this student.
-  if (!$tracks = $degree_plan->get_available_tracks())
-  {
-    $rtn .= "<li>" . t("This major has no degree options.") . "</li>";
-  }
-
-  // Is there a "default" message for all tracks, which will override
-  // any other track descriptions?
-  // We need to look through all the tracks for the
-  // characters:  "DEFAULT:"
-  // If we find this, then this is the default description
-  // which applies to all the tracks, and it should be displayed
-  // at the top.
-  $bool_default_description = false;
-  for ($t = 0; $t < count($tracks); $t++)
-  {
-    $temp = explode(" ~~ ", $tracks[$t]);
-    $track_code = trim($temp[0]);
-    $track_title = trim($temp[1]);
-    $track_description = trim($temp[2]);
-
-    if (strstr($track_description, "DEFAULT:")) {
-      // Yes!  We found a default message.
-      $bool_default_description = true;
-      $track_description = filter_markup(trim(str_replace("DEFAULT:", "", $track_description)));
-      $track_description = "<div style='padding-top: 10px;' class='tenpt'>$track_description</div>";
-      $rtn = str_replace("<!--DEFAULT-->",$track_description, $rtn);
-      break;
-    }
-
-  }
-
-  ///////////////////
-  // Okay, go through the tracks, 
-
-  for ($t = 0; $t < count($tracks); $t++)
-  {
-    $temp = explode(" ~~ ", $tracks[$t]);
-    $track_code = trim($temp[0]);
-    $track_title = trim($temp[1]);
-    $track_degree_id = intval(trim(@$temp[3]));
-    $track_description = "";
-
-
-
-    // TODO:  This business won't work here...
-    // If this is the current track_code, mark it as such.
-    if (@$student->array_settings["track_code"] == $track_code
-    && @$student->array_settings["major_code"] == $degree_plan->major_code)
+    // Get the list of available tracks for this student.
+    if (!$tracks = $t_degree_plan->get_available_tracks())
     {
-      $track_title .= " <b>(" . t("current") . ")</b>";
+      $rtn .= "<li>" . t("This degree has no degree options.") . "</li>";
     }
 
-    if ($bool_default_description == false) {
-      $track_description = filter_markup(trim($temp[2]));
+    // Is there a "default" message for all tracks, which will override
+    // any other track descriptions?
+    // We need to look through all the tracks for the
+    // characters:  "DEFAULT:"
+    // If we find this, then this is the default description
+    // which applies to all the tracks, and it should be displayed
+    // at the top.
+    $bool_default_description = false;
+    for ($t = 0; $t < count($tracks); $t++)
+    {
+      $temp = explode(" ~~ ", $tracks[$t]);
+      $track_code = trim($temp[0]);
+      $track_title = trim($temp[1]);
+      $track_description = trim($temp[2]);
+  
+      if (strstr($track_description, "DEFAULT:")) {
+        // Yes!  We found a default message.
+        $bool_default_description = true;
+        $track_description = filter_markup(trim(str_replace("DEFAULT:", "", $track_description)));
+        $track_description = "<div style='padding-top: 10px;' class='tenpt'>$track_description</div>";
+        $rtn = str_replace("<!--DEFAULT-->",$track_description, $rtn);
+        break;
+      }
+  
     }
+  
+    ///////////////////
+    // Okay, go through the tracks, 
+  
+    for ($t = 0; $t < count($tracks); $t++)
+    {
+      $temp = explode(" ~~ ", $tracks[$t]);
+      $track_code = trim($temp[0]);
+      $track_title = trim($temp[1]);
+      $track_degree_id = intval(trim(@$temp[3]));
+      $track_description = "";
+  
+      $selected = "";
+  
+      // If this track has been selected already, mark it as such
+      if (isset($degree_plan_array[$track_degree_id])) {
+        // Meaning yes, this was already selected for this student.
+        $selected = "checked=checked";
+      }
+  
+  
+      if ($bool_default_description == false) {
+        $track_description = filter_markup(trim($temp[2]));
+      }
+  
+      $temp_tc = $track_code;
+      if ($temp_tc == "") {
+        $temp_tc = "none";
+      }
+  
+  
+      $link = fp_get_js_confirm_link(t("Are you sure you wish to change degree options?"), "opener.changeTrack(\"$temp_tc\"); window.close(); ", $track_title);
+      
+      if ($GLOBALS["fp_advising"]["advising_what_if"] == "yes") {
+        $link = "<a href='javascript: popupChangeWhatIfTrack(\"$temp_tc\", \"" . t("Are you sure you wish to change degree options?") . "\");'>$track_title</a>";      
+      }
+  
+      //$rtn .= "<li class='tenpt' style='padding:3px;'>
+      //    $link $track_description</li>";
+  
+      
+      $track_degree_plan = new DegreePlan($track_degree_id, NULL, TRUE);  // load minimally
+      
+      
+      if ($track_degree_plan->db_allow_dynamic == 1) {
+        $rtn .= "<div class='track-option'>
+                    <label>
+                      <input type='checkbox' name='track_degree_id_$track_degree_id' value='$track_degree_id' $selected> 
+                      <span class='track-title'>" . $track_degree_plan->get_title2(TRUE, TRUE) . "
+                      </span>
+                    </label>
+                    <div class='track-description'>
+                      $track_description
+                    </div>
+                  </div>";
+      }
+  
+  
+    } // for (count(tracks))
+  
+    $rtn .= "</ul>";    
 
-    $temp_tc = $track_code;
-    if ($temp_tc == "") {
-      $temp_tc = "none";
-    }
-
-
-    $link = fp_get_js_confirm_link(t("Are you sure you wish to change degree options?"), "opener.changeTrack(\"$temp_tc\"); window.close(); ", $track_title);
-    
-    if ($GLOBALS["fp_advising"]["advising_what_if"] == "yes") {
-      $link = "<a href='javascript: popupChangeWhatIfTrack(\"$temp_tc\", \"" . t("Are you sure you wish to change degree options?") . "\");'>$track_title</a>";      
-    }
-
-    //$rtn .= "<li class='tenpt' style='padding:3px;'>
-    //    $link $track_description</li>";
-
-    
-    $track_degree_plan = new DegreePlan($track_degree_id, NULL, TRUE);  // load minimally
-    
-    
-    if ($track_degree_plan->db_allow_dynamic == 1) {
-      $rtn .= "<div class='track-option'>
-                  <label>
-                    <input type='checkbox' name='track_degree_id_$track_degree_id' value='$track_degree_id'> 
-                    <span class='track-title'>" . $track_degree_plan->get_title2(TRUE, TRUE) . "
-                    </span>
-                  </label>
-                  <div class='track-description'>
-                    $track_description
-                  </div>
-                </div>";
-    }
-
-
-  }
-
-  $rtn .= "</ul>";    
-
-
+  } // foreach degree_plan_array
 
   $rtn .= "<input type='button' value='" . t("Apply Selections") . "'
               onClick='if(confirm(\"Are you sure you wish to apply these selections to the degree plan?\")) { popupChangeTrackSelections();  }'>";
@@ -1456,11 +1481,12 @@ function advise_init_screen() {
     $degree_plan->db = get_global_database_handler();
   } 
   
-  if (!$bool_loaded) {
+  if (!$bool_loaded) {    
     $fp = new FlightPath();
     $fp->init();    
     $student = $fp->student;
     $degree_plan = $fp->degree_plan;
+    fpm($degree_plan);
     $GLOBALS["fp_advising"]["load_from_cache"] = "no";
     $bool_loaded = TRUE;    
   }
@@ -1543,7 +1569,7 @@ function advise_init_screen() {
 
 
   if (@$GLOBALS["fp_advising"]["load_from_cache"] != "yes") { 
-    // do not load from cache....
+    // do not load from cache....  load the student fresh....
     $student->load_student();
     $student->load_student_substitutions();
     $student->load_unassignments();
