@@ -617,7 +617,9 @@ $q = "
 CREATE TABLE `student_degrees` (
   `student_id` varchar(30) NOT NULL DEFAULT '',
   `major_code` varchar(20) NOT NULL DEFAULT '',
-  PRIMARY KEY (`student_id`,`major_code`)
+  `is_whatif` tinyint(4) NOT NULL DEFAULT '0',
+  `is_editable` tinyint(4) NOT NULL DEFAULT '0',
+  PRIMARY KEY (`student_id`,`major_code`,`is_whatif`)
 );  ";
 db_query($q);
 
