@@ -1,6 +1,10 @@
 FlightPath 4.x Changelog
 ========================
 
+2015-12-11
+  Working on changing track selections
+  
+
 2015-12-9
   Have been working on unassignments in groups, cleaned up a lot of code, and have been making the Degrees page listing
   (for admin data entry) much cleaner and nicer-looking.
